--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 h1 {
   font-size: 5rem;
   color: #DBEDF3;
-  font-family: "Arvo", cursive;
+  font-family: 'Press Start 2P', cursive;
   text-shadow: 3px 0 #35363A;
 
 }
